<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hankkin.myapplication.activity.MainShowActivity">




<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.hankkin.compustrading.view.PagerSlidingTabStrip
        android:layout_below="@+id/rl_title"
        android:id="@+id/tab"
        app:pstsShouldExpand="false"
        app:pstsUnderlineHeight="1dp"
        app:pstsIndicatorHeight="1dp"
        app:pstsIndicatorColor="@color/theme_color"
        app:selectedTabTextColor="@color/theme_color"
        app:pstsDividerColor="@android:color/transparent"
        app:pstsTabBackground="@drawable/tab_background"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <android.support.v4.view.ViewPager
        android:layout_below="@+id/tab"
        android:layout_marginTop="@dimen/small_space"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.hankkin.compustrading.view.floatbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/origle"
        fab:fab_addButtonColorPressed="@color/origle_tab"
        fab:fab_addButtonPlusIconColor="@color/white"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="@dimen/smaller_space"
        android:layout_marginRight="@dimen/smaller_space"
        android:layout_marginEnd="@dimen/smaller_space">

        <com.hankkin.compustrading.view.floatbutton.FloatingActionButton
            android:id="@+id/fb_update"
            android:src="@drawable/update"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/theme_color"
            fab:fab_colorPressed="@color/theme_color_tab"/>

        <com.hankkin.compustrading.view.floatbutton.FloatingActionButton
            android:id="@+id/fb_new"
            fab:paddingEnd="@dimen/small_space"
            android:src="@drawable/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/theme_color"
            fab:fab_colorPressed="@color/theme_color_tab"/>
        <com.hankkin.compustrading.view.floatbutton.FloatingActionButton
            android:id="@+id/fb_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/title_person"
            fab:fab_colorNormal="@color/theme_color"
            fab:fab_colorPressed="@color/theme_color_tab"/>

    </com.hankkin.compustrading.view.floatbutton.FloatingActionsMenu>

</RelativeLayout>


    <LinearLayout
        android:background="@color/white"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/theme_color"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <com.hankkin.compustrading.view.RoundedImageView
                android:id="@+id/rv_usericon"
                android:scaleType="fitCenter"
                android:src="@drawable/defaut"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <TextView
                android:layout_marginTop="@dimen/small_space"
                android:textColor="@color/white"
                style="@style/NewProText"
                android:id="@+id/tv_username"
                android:text="Hankkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <com.hankkin.compustrading.view.RippleView
            android:id="@+id/rv_logreg"
            ripple:rv_zoom="true"
            ripple:rv_type="rectangle"
            android:padding="@dimen/small_space"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_icon"
                android:src="@drawable/login_register"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tv_person"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_icon"
                android:layout_marginLeft="@dimen/biger_space"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_title_btn_textSize"
                android:text="@string/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.hankkin.compustrading.view.RippleView>
        <TextView
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_show"
                android:enabled="false"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/middle_space"
                android:textColor="@color/deep_gray"
                android:textSize="@dimen/normal_title_btn_textSize"
                android:text="@string/others"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <com.hankkin.compustrading.view.RippleView
                android:id="@+id/rv_qq"
                ripple:rv_zoom="true"
                ripple:rv_type="rectangle"
                android:padding="@dimen/small_space"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_icon1"
                    android:src="@drawable/qq"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_qq"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_icon1"
                    android:layout_marginLeft="@dimen/biger_space"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_title_btn_textSize"
                    android:text="@string/qq_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.hankkin.compustrading.view.RippleView>

            <com.hankkin.compustrading.view.RippleView
                android:id="@+id/rv_sina"
                ripple:rv_zoom="true"
                ripple:rv_type="rectangle"
                android:padding="@dimen/small_space"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_icon2"
                    android:src="@drawable/sina"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_sina"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_icon2"
                    android:layout_marginLeft="@dimen/biger_space"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_title_btn_textSize"
                    android:text="@string/weibo_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.hankkin.compustrading.view.RippleView>
            <TextView
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <com.hankkin.compustrading.view.RippleView
                android:id="@+id/rv_buy"
                android:visibility="gone"
                ripple:rv_zoom="true"
                ripple:rv_type="rectangle"
                android:padding="@dimen/small_space"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_buy"
                    android:src="@drawable/buy"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_buy"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_buy"
                    android:layout_marginLeft="@dimen/biger_space"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_title_btn_textSize"
                    android:text="@string/buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.hankkin.compustrading.view.RippleView>
            <com.hankkin.compustrading.view.RippleView
                android:id="@+id/rv_sale"
                android:visibility="gone"
                ripple:rv_zoom="true"
                ripple:rv_type="rectangle"
                android:padding="@dimen/small_space"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_sale"
                    android:src="@drawable/sale"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/tv_sale"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_sale"
                    android:layout_marginLeft="@dimen/biger_space"
                    android:textColor="@color/normal_text_color"
                    android:textSize="@dimen/normal_title_btn_textSize"
                    android:text="@string/sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.hankkin.compustrading.view.RippleView>
        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <TextView
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <com.hankkin.compustrading.view.RippleView
            ripple:rv_zoom="true"
            ripple:rv_type="rectangle"
            android:padding="@dimen/small_space"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/iv_icon3"
                android:src="@drawable/setting"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_icon3"
                android:layout_marginLeft="@dimen/biger_space"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/normal_title_btn_textSize"
                android:text="@string/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.hankkin.compustrading.view.RippleView>
        <TextView
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
